# DANPOS

./: .gitattributes  .gitignore  INSTALL.md  README.md  SECURITY.md  TESTING.md  pixi.toml  pyproject.toml  recipe.yaml  setup.py
conda-recipes/: meta.yaml  recipe.yaml
danpos/: __main__.py  functions.py  lib.py  reads.py  summits.py  wig.py  wigs.py  wiq.py
docs-archive/: INSTALL_Danpos3.2.1.md
scripts/: danpos.sh  print_versions.py
