[project]
name = "danpos"
version = "3.2.3"
description = "A toolkit for Dynamic Analysis of Nucleosome and Protein Occupancy by Sequencing"
authors = [
    { name = "Kaifu Chen" },
    { name = "Samantha Klasfeld" },
    { name = "Boen Chen", email = "boenc28@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.7.6"
dependencies = [
    "numpy>=1.18.5",
    "pysam>=0.16.0.1",
    "rpy2>=3.3",
    "scipy",
    "importlib-metadata",
]

[project.urls]
homepage = "https://sites.google.com/site/danposdoc/home"
repository = "https://github.com/sklasfeld/DANPOS3"
documentation = "https://sites.google.com/site/danposdoc/b-documentation"

[project.scripts]
danpos = "danpos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda", "https://prefix.dev/pixi-build-backends"]
platforms = ["linux-64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
python = ">=3.7.6"
r-base = ">=4.0.1"
samtools = ">=1.7"
numpy = ">=1.18.5"
pysam = ">=0.16.0.1"
rpy2 = ">=3.3"
scipy = "*"

[tool.pixi.pypi-dependencies]
danpos = { path = ".", editable = true }

[tool.pixi.tasks]
test = "./scripts/danpos.sh"

[tool.pixi.package]
host-dependencies = { python = ">=3.7.6", hatchling = "*"}
build-dependencies = { python = ">=3.7.6", hatchling = "*"}

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*", channels = ["https://prefix.dev"] }


[tool.ruff.lint]
select = ["E", "F", "NPY", "B", "UP"]
ignore = ["E501"]  # line too long
